  that caused the translator to fail if a duplicate file was passed
  on the command line.

- Fixed race condition which could cause the thread pool selector
  thread to go away (causing the thread pool to not dispatch further
  incoming messages).

- Deprecated Ice.AsyncCallback. To use the generic asynchronous
  callback facility, applications should derive their classes from
  Ice.Callback.


C# Changes
==========

- Fixed a bug in the generated code that prevented sequences from
  being marshaled using the stream API if the sequences used generic
  collection types.

- Fixed a bug in the IceSSL plug-in that could incorrectly report a
  certificate verification failure when the IceSSL.CheckCertName
  property is enabled.


Python Changes
==============

- Fixed a bug in which destroyed Communicator instances were not being
  garbage collected.

- Fixed a bug in Ice.Application in which the exit status was not
  properly returned from main().


======================================================================
Changes since version 3.4b
======================================================================


General Changes
===============

- Added ability to define default values for Slice data members. For
  example, you can write:

  // Slice
  class C
  {
      int i = 2;
      string name = "John";
  };

- Fixed IceGrid bug where the IceGrid node would disconnect from the
  registry if the clock was moved backward.

- Fixed hang in slice2cs and slice2py that would occur if a comment
  contained a '<' with no closing '>'.

- Fixed a bug in the Java and C# stream classes where readString() and
  readBlob() were not checking the size before allocating memory.

- Fixed source files to have consistent end of line terminators.

- Fixed the Ice.initialize(), Ice.initialize(Ice.InitializationData)
  and Ice.createProperties() overloads in Python, Ruby and PHP to
  match the C++, .NET and Java behavior. These overloads no longer